Overview of changes from 1.4.x to 1.5.0-alpha
==
* Fixed
  - uim Scheme library
    - Fix fullwidth middle dot in halfwidth katakana table for
      Japanese kana-keyboard

  - uim-sh
    - Fix infinite loop on a non-recoverable read error such as
      non-ASCII char in token on a non-Unicode port
    - Fix broken editline feature by SIOD dependencies
    - Fix EOF (^d) ignorance on editline feature is enabled
    - Fix ignorance of multiple expressions on a line on editline
      feature is enabled

Overview of changes from 1.4.0-beta to 1.4.0
==
* Fixed
  - Fix the license terms of replace/strsep.c and replace/setenv.c
    accidencially mis-modified in r790

  - libuim
    - Fix unimplemented return value of uim_input_string()
    - Fix uneffected --disable-nls

  - uim Scheme library
    - Fix lacking heap preallocation for heavy job. This makes uim-pref startup
      faster

Overview of changes from 1.4.0-alpha to 1.4.0-beta
==
* Fixed
  - XIM bridge
    - Startup error of uim-xim due to the 1.3.x-incompatible behavior of
      uim_scm_symbol_value()

  - libuim
    - Fix corrupted return value by uim_scm_return_value() after uim_scm_eval()

  - uim-sh
    - Fix broken 'uim-sh -B' error handling
    - Fix broken backtrace printing

  - Broken compilation on SPARC and IA-64 (NIIBE Yutaka)
  - Suppress warnings

Overview of changes from 1.3.x to 1.4.0-alpha
==
* New features
  - libuim
    - The modified version of SIOD interpreter has been replaced with SigScheme
      0.7.2

* Fixed
  - [CRITICAL] Fix GC crash on SPARC, IA-64, m68k, and possibly MIPS, Alpha, by
    introduction of libgcroots

Overview of changes from 1.3.0 to 1.3.1
==
* Fixes
  - SKK
    - Fix specific key handling in wide-latin direct input mode

  - uim-pref-qt
    - Fix compilation on non-immodule version of Qt3

* Others
  - uim-toolbar-{gtk,gtk-systray,applet}
    - Avoid potential misbehavior in property activation by popup menu
  - uim_panelapplet