@@ -1,5 +1,10 @@
 Overview of changes from 1.4.x to 1.5.0-alpha
 ==
+* New features
+  - uim-sh
+    - Accept script files after options
+    - Add --require-module option (-r for short)
+
 * Fixed
   - uim Scheme library
     - Fix fullwidth middle dot in halfwidth katakana table for
@@ -12,6 +17,7 @@ Overview of changes from 1.4.x to 1.5.0-alpha
     - Fix EOF (^d) ignorance on editline feature is enabled
     - Fix ignorance of multiple expressions on a line on editline
       feature is enabled
+    - Fix pseudo -r (require module) option with real require-module
 
 Overview of changes from 1.4.0-beta to 1.4.0
 ==
